fixed searchbar spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -61,6 +61,10 @@ body {
   background: #3f4448;
   border-color: transparent;
 }
+.btn-success:hover {
+  background: #5cb85c;
+  transition: 0.3s ease;
+}
 
  /***********************/
  /*      desktop        */
@@ -70,7 +74,7 @@ section#navigation {
   box-shadow: 0 4px 20px rgba(50,50,93,.50);
   nav {
     text-align: center;
-    padding: 0.5em;
+    padding: 0.7em 0 0em 0;
   }
   ul {
     list-style: none;
@@ -124,8 +128,14 @@ section#contactForm {
   .news-image {
     width: 150px;
   }
-  section#navigation #logo {
-    width: 215px;
-    padding: 1em 0em;
+  section#navigation {
+    #logo {
+      width: 215px;
+      padding: 1em 0em;
+    }
+    nav {
+      text-align: center;
+      padding: 1em 0em;
+    }
   }
 }
